ainigma/src/snapshots/ainigma__config__tests__batch_deserialization.snap
---
source: src/config.rs
expression: result
---
ModuleConfiguration {
    identifier: 01920a0e-8c4e-7bbb-80a3-fcae235253ae,
    name: "Softaware security",
    description: "",
    version: "0.0.1",
    categories: [
        Category {
            tasks: [
                Task {
                    id: "task002",
                    name: "Basics of reverse engineering",
                    description: "",
                    points: 1.0,
                    stages: [
                        TaskElement {
                            id: None,
                            name: None,
                            description: None,
                            weight: None,
                            flag: FlagVariant {
                                kind: PureRandom,
                            },
                        },
                    ],
                    build: BuildConfig {
                        directory: "tests/tasks/reverse1",
                        builder: Shell(
                            Shell {
                                entrypoint: "custom_entry.sh",
                            },
                        ),
                        output: [
                            BuildOutputFile {
                                kind: Readme(
                                    "readme.txt",
                                ),
                            },
                            BuildOutputFile {
                                kind: Resource(
                                    "reversable.bin",
                                ),
                            },
                            BuildOutputFile {
                                kind: Resource(
                                    "encrypted_output.txt",
                                ),
                            },
                        ],
                        enabled_modes: NonEmptyBuildModes(
                            [
                                Batch,
                            ],
                        ),
                    },
                    batch: Some(
                        BatchConfig {
                            count: 3,
                        },
                    ),
                },
            ],
            number: 4,
            name: "Reverse engineering",
        },
    ],
    flag_config: FlagConfig {
        pure_random: PureRandom {
            length: 32,
        },
        user_derived: UserDerived {
            algorithm: HMAC_SHA3_256,
            secret: "Try to guess the super secret secret!",
        },
        rng_seed: RngSeed {
            secret: "HaHa you don't know it",
        },
    },
    deployment: Deployment {
        build_timeout: 300,
        upload: Upload {
            aws_s3_endpoint: "",
            aws_region: "",
            bucket_name: "",
            use_pre_signed: false,
            link_expiration: 7,
            file_expiration: 31,
        },
    },
}
